# conan-gtest

./: .gitignore  .travis.yml  1339.patch  CMakeLists.txt  FindGMock.cmake  FindGMock.cmake.in  FindGTest.cmake  FindGTest.cmake.in  README.md  appveyor.yml  build.py  conanfile.py  gtest.patch  hasCombine.patch
test_package/: CMakeLists.txt  conanfile.py
